@@ -1,0 +1,6 @@
+package gizz.tapes.ui.show
+
+@JvmInline
+value class RecordingId(val id: String) {
+    override fun toString(): String = id
+}
