@@ -5,6 +5,7 @@
 - Save player state, app restarts will no longer effect where you were left off in a show.
 - Fix issue where player loses where it is in the playlist when switching between casting and
 local playback.
+- added show notes and ability to change recording source
 
 == Evil Death Roll 2024-12-17
 
